syntax = "proto3";

package models;
option go_package = "./models";

message DownloadStatus {
  bool downloading = 1;
  string file_base_path = 2;
  string file_name = 3;
  string file_sha256 = 4;
  uint64 full_file_size = 5;
  uint64 current_file_size = 6;
}
