syntax = "proto3";

package models;
option go_package = "./models";

message BoolMessage {
  bool message = 1;
}

message StringMessage {
  string message = 1;
}

message StringArrayMessage {
  repeated string message = 1;
}
